# ToTrip

./: .gitignore  README.md  ToTrip_BD.sql  ToTrip_db.dump  documentation  index.html  package-lock.json  package.json  place-category.html  place-category__entertainments.html  place-category__hotels.html  place-category__restaurants.html  place-overview.html  profile-settings-popup.html  profile.html  pyproject.toml  requirements.txt  town-page.html  trip-page.html  trips-page.html
.next/: trace
Search_For_Trip/: urls.py  views.py
ToTrip/: db.json  db.sqlite3  indented_db.json  manage.py  requirements.txt
ToTrip/Db_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
ToTrip/ToTrip/: asgi.py  constants.py  settings.py  urls.py  wsgi.py  yasg.py
ToTrip/TripPlanner/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
ToTrip/UserApp/: urls.py  views.py
ToTrip/review/: models.py  serializers.py  urls.py
ToTrip/users/: models.py  serializers.py  urls.py  views.py
components/: trip-page.html
components/css/: main-page.css  town-page-style.css
components/script/: index.js
css/: index-page-style.css  main-page.css  main-style.css  place-category-style.css  place-overview-style.css  place-overview.css  profile.css  search_pop-up.css  town-page-style.css  trip-page-style.css  trip-page.css  trips-page-style.css
django_Study/: settings.py
js/: hide-content.js  rating-filter.js  search_index.js
script/: profile.js
totrip/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
(+208 files in other folders)
