[tool.poetry]
name = "totrip"
version = "1.0.0"
description = "A Trip planner for you"
authors = ["RadikUlitki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
psycopg2 = "^2.9.10"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
